Add manifest & Icons

--- a/Resources/Views/imageView.html
+++ b/Resources/Views/imageView.html
@@ -1,5 +1,6 @@
 <div class="view" id="imageView">
 	<div class="controls toolBar">
+		<img class="icon" src="./Resources/Img/appIcon.png" alt="Photobook Designer Icon" />
 		<div class="control">
 			<button class="button green" data-ng-click="save()" title="Save photobook to file">
 				<span class="icon icon-liga">&#xe115;</span> Save
