--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -43,6 +43,7 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 .toolBar {
 	position: fixed; top: 0; left: 0; padding: 0.5cm; width: 100%;
 	box-shadow: 0 0 0.5cm gray; opacity: 1; z-index: 100;
+	align-items: center;
 }
 
 .welcomeControls {
@@ -96,5 +97,5 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 	}
 }
 
-
+img.icon { height: 1cm; margin-right: 0.5cm; display: block; width: auto; }
 
