--- a/Resources/Styles/stylesTitle.less
+++ b/Resources/Styles/stylesTitle.less
@@ -8,9 +8,9 @@
 	&.big h2 { font-size: 6cm; }
 	&.extraBig h2 { font-size: 8cm; }
 
-	&.standard h2 { background: rgba(0,0,0,0.75); }
-	&.ocean h2 { background: rgba(30,144,255,0.75); text-shadow: 0 0 0.05em white; }
-	&.desert h2 { background: rgba(139,69,19,0.75); color: white; text-shadow: 0 0 0.05em black; }
-	&.winter h2 { background: rgba(255,255,255,0.75); color: white; text-shadow: 0 0 0.05em black; }
-	&.dark h2 { background: rgba(0,0,0,0.75); color: black; text-shadow: 0 0 0.05em white; }
+	&.standard h2 { background: black; background: rgba(0,0,0,0.75); }
+	&.ocean h2 { background: rgb(30,144,255); background: rgba(30,144,255,0.75); text-shadow: 0 0 0.05em white; }
+	&.desert h2 { background: rgb(139,69,19); background: rgba(139,69,19,0.75); color: white; text-shadow: 0 0 0.05em black; }
+	&.winter h2 { background: rgb(255,255,255); background: rgba(255,255,255,0.75); color: white; text-shadow: 0 0 0.05em black; }
+	&.dark h2 { background: black; background: rgba(0,0,0,0.75); color: black; text-shadow: 0 0 0.05em white; }
 }
