Refactor Dragpoint directive

--- a/Resources/Views/imageView.html
+++ b/Resources/Views/imageView.html
@@ -29,7 +29,7 @@
 					<div class="controls titleControls">
 						<div class="control">
 							<span class="icon icon-liga" data-dragpoint="true" data-pos-left="title.properties['left']"
-								  data-pos-top="title.properties['top']" data-width="title.properties['width']">&#xe093;</span>
+								  data-pos-top="title.properties['top']">&#xe093;</span>
 						</div>
 						<div class="control">
 							<label>&dArr;</label>
