--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -42,8 +42,12 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 
 .toolBar {
 	position: fixed; top: 0; left: 0; padding: 0.5cm; width: 100%;
-	box-shadow: 0 0 0.5cm gray; opacity: 1; z-index: 100;
+	box-shadow: 0 0 0.25cm black; opacity: 1; z-index: 100;
 	align-items: center;
+	background: linear-gradient(rgb(62,62,58),rgb(20,20,20));
+	border-bottom: 1px solid rgb(100,100,100);
+
+	* { color: white; }
 }
 
 .welcomeControls {
