--- a/Resources/Styles/form.less
+++ b/Resources/Styles/form.less
@@ -6,7 +6,18 @@
 }
 
 input[type="text"], input[type="password"], input[type="url"], textarea {
-	.background-linear-gradient(silver, white);
-	border: 0.05em solid gray;
-	padding: @elementPadding; border-radius: 0.25em;
+	.background-linear-gradient(gainsboro, white);
+	border: 1px solid gray;
+	padding: @elementPadding; border-radius: 0.4em;
+	height: 2em;
+}
+
+span.inputFileWrapper {
+	display: button;
+
+	input[type="file"] { width: 5em; position: absolute; opacity: 0; }
+}
+
+textarea.dragArea {
+	width: 4cm; border: 2px dashed gray; background: white; padding: 0.1cm; text-align: center; height: 2.35em;
 }
