--- a/Resources/Styles/styles.less
+++ b/Resources/Styles/styles.less
@@ -4,4 +4,5 @@
 @import url("app.less");
 @import url("form.less");
 @import url("imageView.less");
-@import url("stylesTitle.less");
+@import url("Layout/titles.less");
+@import url("Layout/images.less");
