--- a/Resources/Styles/app.less
+++ b/Resources/Styles/app.less
@@ -30,79 +30,11 @@ figcaption:before { content: "✎"; color: white; margin-right: 0.25cm; font-wei
 }
 
 
-
-/**
- * Controls
- */
-.controls {
-	display: flex; flex-direction: row;
-	background: silver; background: linear-gradient(white, silver); color: black;
-	opacity: 0.9; padding: 0.25cm;
-}
-
-.toolBar {
-	position: fixed; top: 0; left: 0; padding: 0.5cm; width: 100%;
-	box-shadow: 0 0 0.25cm black; opacity: 1; z-index: 100;
-	align-items: center;
-	background: linear-gradient(rgb(62,62,58),rgb(20,20,20));
-	border-bottom: 1px solid rgb(100,100,100);
-
-	* { color: white; }
-}
-
-.welcomeControls {
-	opacity: 1; background: none; padding: 2cm;
-	display: flex; justify-content: space-around;
-}
-
-.imageControls {
-	display: flex; flex-wrap: wrap; justify-content: flex-start; align-content: flex-start;
-
-	* { margin: 0 0.1cm; }
-
-	.control {
-		* { width: 1cm;
-			.label { display: none; }
-		}
-	}
-}
-
-.pageContentControls {
-	position: absolute; box-shadow: 0 0 0.5cm black; border-radius: 0.1cm;
-
-	* { margin: 0 0.1cm; }
-}
-
-.imageContainer.wide .imageControls *, .layout1line .imageContainer.horizontal .imageControls * {
-	width: auto;
-	.label { display: inline-block; }
-}
-
-.titleControls {
-	display: flex; flex-direction: row; justify-content: space-around; min-width: 14cm;
-	box-shadow: 0 0 0.5cm black; border-radius: 0.1cm; align-items: center;
-
-	/*&:before {
-		 width: 0; heigth: 0; border-style: solid; border-width: 0.25cm;
-		 border-color: transparent transparent white transparent; content: ""; display: block;
-		 position: relative; top: -1cm;
-	 }*/
-
-	> .control {
-		> * { max-width: 2cm; }
-		> span[data-dragpoint] { cursor: move; font-size: 1.1em; width: 1cm; }
-		> input[type="number"] { width: 1cm; }
-	}
-}
-
-
 /**
  * Content
  */
 .titles { position: absolute;
-	.title { position: absolute;
-
-	}
+	.title { position: absolute; }
 }
 
 img.icon { height: 1cm; margin-right: 0.5cm; display: block; width: auto; }
