--- a/Resources/Styles/pages.less
+++ b/Resources/Styles/pages.less
@@ -4,11 +4,15 @@
 }
 body { background: silver; }
 
-.page { background: white; box-shadow: 0 0 0.5cm gray; width: 29.7cm; height: 21cm; padding: 1cm; margin: 0.5cm; overflow: hidden; }
-.page > .content { width: 100%; height: 100%; background: rgb(245, 245, 245);
-	display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between;
-	align-content: space-between;
-	overflow: hidden;
+.page {
+	background: white; box-shadow: 0 0 0.5cm gray; width: 29.7cm; height: 21cm; padding: 1cm; margin: 0.5cm;
+	margin-bottom: 2.5cm; overflow: hidden;
+
+	> .content { width: 100%; height: 100%; background: rgb(245, 245, 245);
+		display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between;
+		align-content: space-between;
+		overflow: hidden;
+	}
 }
 
 .content .imageContainer { display: inline-flex; background-position: center center;
@@ -21,10 +25,12 @@ figure.imageContainer figcaption { padding: 0.1cm; color: white; text-align: cen
 	/*background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB94EBgkjJc53tkoAAAAZdEVYdENvbW1lbnQAQ3JlYXRlZCB3aXRoIEdJTVBXgQ4XAAAADUlEQVQI12NgYGCoBwAAhACAxkwJbwAAAABJRU5ErkJggg==');
 	*/
 }
-figure.imageContainer figcaption:empty { background: none; }
-figure.imageContainer figcaption:focus { background: rgba(255,255,255,0.9); border-radius: 0.25cm; padding: 0; margin: 0.1cm; color: black;
-	-webkit-box-shadow: inset 0px 0px 0.1cm 0px black; -moz-box-shadow: inset 0px 0px 0.1cm 0px black;
-	box-shadow: inset 0px 0px 0.1cm 0px black;
+figure.imageContainer {
+	figcaption:empty { background: none; }
+	figcaption:focus { background: rgba(255,255,255,0.9); border-radius: 0.25cm; padding: 0; margin: 0.1cm; color: black;
+		-webkit-box-shadow: inset 0px 0px 0.1cm 0px black; -moz-box-shadow: inset 0px 0px 0.1cm 0px black;
+		box-shadow: inset 0px 0px 0.1cm 0px black;
+	}
 }
 
 @media print {/**/
