--- a/Resources/Styles/styles.less
+++ b/Resources/Styles/styles.less
@@ -3,6 +3,7 @@
 @import url("button.less");
 @import url("app.less");
 @import url("form.less");
-@import url("imageView.less");
+@import url("pages.less");
 @import url("Layout/titles.less");
 @import url("Layout/images.less");
+@import url("controls.less");
